# mpl-gumdrop

./: Anchor.toml  CONTRIBUTING.md  Cargo.toml  README.md
.github/: .env  file-filters.yml
.github/workflows/: build-rust-client.yml
clients/js/: CONTRIBUTING.md  README.md  package.json
clients/js/bench/: _setup.ts
clients/js/src/: plugin.ts
clients/js/test/: _setup.ts  getProgram.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
idls/: gumdrop.json  mpl_gumdrop_program.json
programs/mpl-gumdrop/: Cargo.toml  README.md
programs/mpl-gumdrop/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
